# air-quality-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci-cd.yml
ansible/: README.md  playbook.yml
ansible/inventory/: hosts.ini
ansible/roles/kafka/tasks/: main.yml
ansible/roles/kafka/templates/: server.properties.j2
ansible/roles/kafka/vars/: main.yml
dags/: orchestrator.py
dataflow/: gcs_to_bigquery.py  kafka_to_gcs.py  streaming.py
flink/: flink-conf.yaml  job-ingestion.py
kafka_connect/: pubsub-config.json  pubsub-sink.properties
kubernetes/: README.md  flink-job-submit.yaml  flink-jobmanager-service.yaml  flink-jobmanager.yaml  flink-taskmanager-service.yaml  flink-taskmanager.yaml  kafka-cluster.yaml
src/: consumer.py  producer.py  simulate_data.py
src/producer/: simulate_data.py
terraform/: README.md  iam.tf  main.tf  terraform.tfvars  variables.tf  vars.tf
tests/: test_simulate_data.py
