[project]
name = "air-quality-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Flavian Reignault",email = "flavian.reignault@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kafka-python (>=2.1.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
